[gd_scene load_steps=7 format=3 uid="uid://7qq3vuoceatc"]

[ext_resource type="Script" uid="uid://qpowbr7ro121" path="res://2d/main_menu_2d/menu_2d.gd" id="1_twqau"]

[sub_resource type="Gradient" id="Gradient_t22ev"]
colors = PackedColorArray(0, 0, 0, 1, 0.0840567, 0.0142973, 0.0131769, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_twqau"]
gradient = SubResource("Gradient_t22ev")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.15, 0.03, 0.03, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.7, 0.1, 0.1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.8, 0.2, 0.2, 0.8)
shadow_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.05, 0.01, 0.01, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.3, 0.03, 0.03, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.4, 0.05, 0.05, 0.4)
shadow_size = 4
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.08, 0.02, 0.02, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4, 0.05, 0.05, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.6, 0.1, 0.1, 0.6)
shadow_size = 8

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_twqau")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.01, 0.03, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_twqau")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -108.5
offset_right = 200.0
offset_bottom = 108.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(350, 60)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.9, 0.9, 1)
theme_override_colors/font_color = Color(0.9, 0.8, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "JUGAR"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.9, 0.9, 1)
theme_override_colors/font_color = Color(0.9, 0.8, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "OPCIONES"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.9, 0.9, 1)
theme_override_colors/font_color = Color(0.9, 0.8, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "SALIR"

[node name="MadeByLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.6, 0.5, 0.5, 0.8)
theme_override_font_sizes/font_size = 16
text = "Made by SquareOne"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_configuracion_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_salir_pressed"]
